added-message-POST

--- a/public/views/msgBox.html
+++ b/public/views/msgBox.html
@@ -24,6 +24,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <nav>
@@ -35,13 +36,35 @@
       <div class="container message right">Amlend : ha bol , kooch nhi</div>
     </div>
     <div class="send">
-      <form action="#" id="send-container">
-        <input type="text" name="messageInp" id="messageInp" />
+      <form
+        action="msg-send"
+        method="post"
+        id="send-container"
+        onsubmit="msgAuth()"
+      >
+        <input type="text" name="message" id="messageInp" />
         <button class="btn" type="submit">Send</button>
       </form>
     </div>
-    <script src="">
-      const socket = io();
+    <script>
+      function msgAuth() {
+        const token = localStorage.getItem("token");
+        const message = document.getElementById("messageInp").value;
+        axios
+          .post(
+            "http://localhost:3000/msg-send",
+            { message },
+            { headers: { Authorization: token } }
+          )
+          .then((Response) => {
+            if (Response.data.success === true) {
+              window.location.reload();
+            }
+          })
+          .catch((err) => {
+            console.log(err);
+          });
+      }
     </script>
   </body>
 </html>
