--- a/public/views/msgBox.html
+++ b/public/views/msgBox.html
@@ -25,21 +25,28 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script src="msgBox.js"></script>
   </head>
   <body>
     <nav>
       <img class="logo" src="chat.jpeg" alt="icon loding ...." />
     </nav>
-
-    <div class="container msg-box" id="msgBox">
-      <div class="container message left" id="leftBox">
-        Shyam : hey bro , kya kr rha hai
+    <div class="container-fluid panel">
+      <div class="groupBox">
+        <input
+          type="text"
+          name="GroupName"
+          id="GroupName"
+          placeholder="Group Name"
+          required
+        />
+        <input type="button" onclick="CreateGroup()" value="Create Group" />
+        <ul id="groupPanel"></ul>
       </div>
-      <div class="container message right" id="rightBox">
-        Amlend : ha bol , kooch nhi
-      </div>
+      <div class="container msg-box" id="msgBox"></div>
     </div>
+
     <div class="send">
       <form
         action="msg-send"
@@ -47,7 +54,7 @@
         id="send-container"
         onsubmit="msgAuth()"
       >
-        <input type="text" name="message" id="messageInp" />
+        <input type="text" name="message" id="messageInp" required />
         <button class="btn" type="submit">Send</button>
       </form>
     </div>
@@ -65,6 +72,8 @@
             if (Response.data.success === true) {
               window.location.reload();
             }
+
+            document.getElementById("messageInp").value = " ";
           })
           .catch((err) => {
             console.log(err);
