--- a/public/views/login.html
+++ b/public/views/login.html
@@ -32,7 +32,7 @@
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
             <input
-              type="text"
+              type="password"
               class="form-control"
               id="login-password"
               name="password"
@@ -47,7 +47,7 @@
             </div>
           </div>
           <div class="mt-1 ms-0">
-            <a class="btn" href="./signup.html">Signup?</a>
+            <a class="btn" href="/user/signup">Signup?</a>
           </div>
         </form>
       </div>
