added-group-admin-powers

--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -10,7 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style/signup.css" />
+    <link rel="stylesheet" href="/signup.css" />
     <title>Group Chat App</title>
   </head>
   <body>
@@ -67,7 +67,7 @@
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./script/global.js"></script>
-    <script src="./script/signup.js"></script>
+    <script src="/global.js"></script>
+    <script src="/signup.js"></script>
   </body>
 </html>
